# Coriolis

bootstrap/: build.conf
coloquinte/src/: CMakeLists.txt  checkers.cxx  circuit.cxx  legalizer.cxx  optimization_subproblems.cxx  rough_legalizers.cxx  topologies.cxx
coloquinte/src/coloquinte/: circuit.hxx  netlist.hxx  rough_legalizers.hxx
crlcore/: CMakeLists.txt
crlcore/src/ccore/: GdsDriver.cpp
crlcore/src/ccore/agds/: Agds.h  AgdsDriver.cpp
crlcore/src/ccore/crlcore/: GdsDriver.h
crlcore/src/ccore/ispd05/: Ispd05Bookshelf.cpp
cumulus/: CMakeLists.txt
cumulus/src/plugins/: RSavePlugin.py
etesian/: CMakeLists.txt
etesian/src/: EtesianEngine.cpp
etesian/src/etesian/: EtesianEngine.h
hurricane/: CMakeLists.txt
ispd/: CMakeLists.txt
katabatic/: CMakeLists.txt
katabatic/src/: GCellGrid.cpp  LoadGrByNet.cpp
kite/: CMakeLists.txt
kite/src/: CMakeLists.txt  GraphicKiteEngine.cpp  KiteEngine.cpp  KiteMain.cpp
kite/src/kite/: KiteEngine.h
knik/src/: CMakeLists.txt  Graph.cpp  KnikEngine.cpp  Vertex.cpp
knik/src/knik/: Graph.h  KnikEngine.h
mauka/: CMakeLists.txt
metis/: CMakeLists.txt
nimbus/: CMakeLists.txt
spaghetti/: CMakeLists.txt
spaghetti/cmake_modules/: CMakeLists.txt  FindSPAGHETTI.cmake
spaghetti/src/: CMakeLists.txt  CostFunctions.cpp  Graph.cpp  Grid.cpp  RoutableGraph.cpp  Route.cpp  SpaghettiEngine.cpp  SteinerRoute.cpp  main.cpp
spaghetti/src/spaghetti/: CostFunctions.h  Graph.h  Grid.h  SpaghettiEngine.h  UnionFindMap.h
stratus1/: CMakeLists.txt
unicorn/: CMakeLists.txt
unicorn/src/: ExportCellDialog.cpp  UnicornGui.cpp
unicorn/src/unicorn/: ExportCellDialog.h
vlsisapd/: CMakeLists.txt
vlsisapd/src/agds/src/: CMakeLists.txt  Library.cpp  PyAgds.cpp  Rectangle.cpp  Structure.cpp
vlsisapd/src/agds/src/vlsisapd/agds/: Element.h  GdsUtils.h  Library.h  Rectangle.h  Structure.h
vlsisapd/src/bookshelf/src/: Parser.cpp
